Updated names and path to access

--- a/web_application/start-audit.html
+++ b/web_application/start-audit.html
@@ -34,7 +34,7 @@
     <div class="sidebar">
         <h2><i class="fas fa-warehouse"></i> Inventory</h2>
         <ul>
-            <li onclick="window.location.href='dashboad.html'"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
+            <li onclick="window.location.href='index.html'"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
         </ul>
     </div>
     <div class="main-content">
