--- a/web_application/inventory-analysis.html
+++ b/web_application/inventory-analysis.html
@@ -122,7 +122,7 @@
     <div class="sidebar">
         <h2><i class="fas fa-warehouse"></i> Inventory</h2>
         <ul>
-            <li onclick="window.location.href='dashboad.html'"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
+            <li onclick="window.location.href='index.html'"><i class="fas fa-tachometer-alt"></i> Dashboard</li>
             <li><i class="fas fa-cubes"></i> Stock Levels</li>
             <li><i class="fas fa-history"></i> Recent Audits</li>
             <li><i class="fas fa-plus-circle"></i> Add Audit</li>
