--- a/web_application/inventory-analysis.html
+++ b/web_application/inventory-analysis.html
@@ -270,10 +270,11 @@
             <button class="secondary" onclick="window.location.href='dashboad.html'">Return to Dashboard</button>
         </div>
     </div>
+    <!-- Remove the footer element that begins here
     <footer>
         <p>&copy; 2025 Warehouse Audit Systems</p>
     </footer>
-    
+    -->
     <script>
         function completeAnalysisAudit() {
             // Update the status in local storage
