--- a/web_application/inventory-analysis.html
+++ b/web_application/inventory-analysis.html
@@ -267,7 +267,7 @@
 
         <div class="action-buttons">
             <button onclick="completeAnalysisAudit()">Complete Audit</button>
-            <button class="secondary" onclick="window.location.href='dashboad.html'">Return to Dashboard</button>
+            <button class="secondary" onclick="window.location.href='index.html'">Return to Dashboard</button>
         </div>
     </div>
     <!-- Remove the footer element that begins here
