--- a/web_application/index.html
+++ b/web_application/index.html
@@ -734,8 +734,8 @@
                 
             } catch (error) {
                 console.error('Error in audit submission:', error);
-                resultMessage.innerHTML = `<div style="color: #721c24; background: #f8d7da; padding: 10px; border-radius: 4px;">
-                    Error adding audit: ${error.message}</div>`;
+                // resultMessage.innerHTML = `<div style="color: #721c24; background: #f8d7da; padding: 10px; border-radius: 4px;">
+                    // Error adding audit: ${error.message}</div>`;
             }
         }
 
